<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/edit_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblOriginalTerm"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/front_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtOriginalTerm"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtOriginalTerm"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:inputType="text|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"
        tools:text="Grandpa" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblRevealedTerm"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/back_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtRevealedTerm"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtRevealedTerm"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:imeOptions="actionDone"
        android:inputType="text|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/txtOriginalTerm"
        tools:text="Ojiisan" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/delete"
        android:textColor="@color/colorDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRevealedTerm" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveTerm"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRevealedTerm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveTerm"
        app:layout_constraintTop_toBottomOf="@+id/txtRevealedTerm" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="lblOriginalTerm,lblRevealedTerm" />
</androidx.constraintlayout.widget.ConstraintLayout>