<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_more"
        android:title="@string/more"
        app:showAsAction="never"
        />

</menu>